// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/status/rejected \`code\` is an integer renders 1`] = `
<div
  className="alpha rejected"
>
  <h2>
    1
    : 
    MOCK NAME
  </h2>
</div>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/status/rejected \`message\` is a string renders 1`] = `
<div
  className="alpha rejected"
>
  <h2>
    MOCK NAME
  </h2>
  <p>
    MOCK MESSAGE
  </p>
</div>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/status/rejected Always renders 1`] = `
<div
  className="alpha rejected"
>
  <h2>
    MOCK NAME
  </h2>
</div>
`;
